# multitude_bot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/entities/: chat.rs  feed.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231104_000001_create_table.rs
src/: main.rs
