[workspace]
members = [".", "entity", "migration"]

[package]
name = "multitude_bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
log = "0.4"
pretty_env_logger = "0.4"
entity = { path = "entity" }
migration = { path = "migration" }
