[workspace]
members = [".", "entity", "migration"]

[package]
name = "multitude_bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = ">=1.0"
teloxide = { version = ">=0.12", features = ["macros"] }
tokio = { version =  ">=1.8", features = ["rt-multi-thread", "macros"] }
tokio_schedule = ">=0.3.1"
sea-orm = { version = ">=0.12", features = [ "runtime-tokio-rustls", "sqlx-postgres", "macros" ] }
sea-orm-migration = { version = ">=0.12", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
log = ">=0.4"
pretty_env_logger = ">=0.4"
rss = { version = ">=2.0.6", features = ["validation"] }
reqwest = { version = ">=0.11" }

# These must be the last two dependencies as I would remove them in the dockerfile to speed up
# donwloading/compiling the ones above which are not my code
entity = { path = "entity" }
migration = { path = "migration" }
